--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,14 +11,18 @@
 
 <body>
     <h1>
-        Please Login In
+        Welcom to the Favorite Database!
     </h1>
+    
+    <h2>
+        Please Login In
+    </h2>
     <form action='/login' method='POST' class = "pure-form">
         <label for="username">Username</label> <br>
         <input type = "text" name = "username" id = "username"> <br><br>
         <label for="password">Password</label> <br>
         <input type = "password" name = "password" id = "password"> <br><br>
-        <input type = "submit" value = "submit"> <br>
+        <input type = "submit" value = "submit" class = "pure-button pure-button-primary"> <br>
     </form>
 <p id = "message">
     {{{msg}}}
