--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,5 +1,6 @@
 body {
     background-color: aquamarine;
+    font-family: "Dosis", sans-serif;
 }
 
 form {
@@ -45,10 +46,9 @@ table{
 }
 
 #allForms{
-     max-width: fit-content;
+  max-width: fit-content;
   margin-left: auto;
   margin-right: auto;
   display: flex;
-  align-items: flex-start;
-    
+  align-items: flex-start;    
 }
